# opengl-demo-scene

./: .gitignore  CMakeLists.txt  README.md  dd.txt
shaders/: default.vert
src/: main.cpp
src/application/: Application.cpp  Application.h  Character.cpp  Character.h  Object.cpp  Object.h  Shader.cpp  Shader.h
src/structures/: BaseScene.cpp  BaseScene.h  SceneCube.cpp  SceneCube.h
src/utils/: BaseLog.cpp  BaseLog.h  COutLog.cpp  COutLog.h
